--- a/demo/ActionPanel.html
+++ b/demo/ActionPanel.html
@@ -9,17 +9,27 @@
             packages: [
                 {
                     name: 'esui',
-                    location: 'dep/esui/src',
+                    location: '../dep/esui/src',
                     main: 'main'
                 },
                 {
                     name: 'er',
-                    location: 'dep/er/src',
+                    location: '../dep/er/src',
                     main: 'main'
                 },
                 {
                     name: 'ef',
                     location: '../src'
+                },
+                {
+                    name: 'underscore',
+                    location: '../dep/underscore/src',
+                    main: 'underscore'
+                },
+                {
+                    name: 'mini-event',
+                    location: '../dep/mini-event/src',
+                    main: 'main'
                 }
             ]
         });
