--- a/test/run.htm
+++ b/test/run.htm
@@ -16,13 +16,33 @@
             packages: [
                 {
                     name: 'er',
-                    location: '../lib/er/src',
+                    location: '../dep/er/3.1.0-alpha.8/src',
                     main: 'main'
                 },
                 {
                     name: 'esui',
-                    location: '../lib/esui/src',
+                    location: '../dep/esui/3.1.0-alpha.8/src',
                     main: 'main'
+                },
+                {
+                    name: 'underscore',
+                    location: '../dep/underscore/1.5.2/src',
+                    main: 'underscore'
+                },
+                {
+                    name: 'etpl',
+                    location: '../dep/etpl/2.1.0/src',
+                    main: 'main'
+                },
+                {
+                    name: 'mini-event',
+                    location: '../dep/mini-event/1.0.0/src',
+                    main: 'main'
+                },
+                {
+                    name: 'moment',
+                    location: '../dep/moment/2.0.1/src',
+                    main: 'moment'
                 },
                 {
                     name: 'ef',
