--- a/demo/chi/index.htm
+++ b/demo/chi/index.htm
@@ -11,25 +11,43 @@
     <script src="src/common/sugar-1.3.9.min.js"></script>
     <script>
         require.config({
-            baseUrl: './src',
-            paths: {
-                css: 'common/esl-css'
-            },
-            packages: [
+            'baseUrl': '../../src',
+            'paths': { 'css': 'common/esl-css' },
+            'packages': [
                 {
-                    name: 'er',
-                    location: '../lib/er/src',
-                    main: 'main'
+                    'name': 'er',
+                    'location': '../dep/er/3.1.0-beta.3/src',
+                    'main': 'main'
                 },
                 {
-                    name: 'esui',
-                    location: '../lib/esui/src',
-                    main: 'main'
+                    'name': 'esui',
+                    'location': '../dep/esui/3.1.0-beta.3/src',
+                    'main': 'main'
                 },
                 {
-                    name: 'ef',
-                    location: '../../../src',
-                    main: 'main'
+                    'name': 'ef',
+                    'location': '../../../src',
+                    'main': 'main'
+                },
+                {
+                    'name': 'etpl',
+                    'location': '../dep/etpl/2.1.2/src',
+                    'main': 'main'
+                },
+                {
+                    'name': 'mini-event',
+                    'location': '../dep/mini-event/1.0.0/src',
+                    'main': 'main'
+                },
+                {
+                    'name': 'moment',
+                    'location': '../dep/moment/2.7.0/src',
+                    'main': 'moment'
+                },
+                {
+                    'name': 'underscore',
+                    'location': '../dep/underscore/1.5.2/src',
+                    'main': 'underscore'
                 }
             ]
         });
