修复自动更新require配置会出错的问题

--- a/demo/ActionPanel.html
+++ b/demo/ActionPanel.html
@@ -41,6 +41,11 @@
                     'name': 'ef',
                     'location': '../src',
                     'main': 'main'
+                },
+                {
+                    'name': 'eoo',
+                    'location': '../dep/eoo/0.0.5/src',
+                    'main': 'oo'
                 }
             ],
             'paths': {}
